...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Taj-lf-U7f">
                                <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                            </imageView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="43" translatesAutoresizingMaskIntoConstraints="NO" id="Vqa-7k-t7V">
                                <rect key="frame" x="192" y="61" width="384" height="308"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Room Code" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Qa-g5-cEd">
                                        <rect key="frame" x="0.0" y="0.0" width="384" height="50"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MdW-AQ-rxh">
                                        <rect key="frame" x="0.0" y="93" width="384" height="50"/>
                                        <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="JPh-cX-mJg"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                        <state key="normal" title="Join"/>
                                        <connections>
                                            <action selector="joinOnTap:" destination="Hnz-Vf-gJ2" eventType="touchUpInside" id="NU0-vG-ir5"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sz2-KC-ChA">
                                        <rect key="frame" x="0.0" y="186" width="384" height="50"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tAp-QC-B8D">
                                <rect key="frame" x="0.0" y="0.0" width="768" height="50"/>
                                <items>
                                    <navigationItem title="Players" id="SPI-21-lFS">
                                        <barButtonItem key="leftBarButtonItem" title="Back" id="e5v-FV-W3a">
                                            <connections>
                                                <action selector="backOnTap:" destination="Hmh-pE-tgE" id="n57-fO-0aL"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Start" id="JI3-iw-NvF">
                                            <connections>
                                                <action selector="startOnTap:" destination="Hmh-pE-tgE" id="avb-MG-ZAF"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
...
                                        <rect key="frame" x="0.0" y="0.0" width="168" height="80"/>
                                        <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="Wb8-TG-26b"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                        <state key="normal" title="Classic"/>
                                        <connections>
                                            <segue destination="Hnz-Vf-gJ2" kind="show" id="GIz-Hk-xlZ"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qeg-qU-QVj">
                                        <rect key="frame" x="0.0" y="110" width="168" height="80"/>
...
